Commit 18112024 JPA use as SQL consultas